Edited wiki page through web user interface.

--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 = C++ API =
 The whole library is currently contained in the header file *polymul.h*.
 
@@ -5,7 +6,7 @@ The whole library is currently contained in the header file *polymul.h*.
 For type safety and utility functions there is a class representing polynomials:
 === template<class numtype, int Nvar, int Ndeg> class polynomial; ===
 
-Class that encapsulates binomial(Nvar+Ndeg,Ndeg) coefficients. It is safe to cast (with reinterpret_cast) an array of numtype to a polynomial, or vice versa. It is also safe to cast a polynomial to a polynomial type of lower degree, but with the same number of variables. The polynomial class supports access to the coefficients through the `[]` indexing operator, where the index is the order of the term described above. Nvar must be greater or equal to one, while Ndeg must be a non-negative number
+Class that encapsulates binomial(Nvar+Ndeg,Ndeg) coefficients. It is safe to cast (with reinterpret_cast) an array of numtype to a polynomial, or vice versa. It is also safe to cast a polynomial to a polynomial type of lower degree, but with the same number of variables. The polynomial class supports access to the coefficients through the `[]` indexing operator, where the index is the order of the term described in [CoefficientOrder]. Nvar must be greater or equal to one, while Ndeg must be a non-negative number
 
 The scalar type numtype can be any type that supports the + and * operators, and which has a commuting product.
 
