--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -1,25 +1,27 @@
 #labels Featured
 = C++ API =
+Note that this documentation refers to the current development version in SVN.
+
 The whole library is currently contained in the header file *polymul.h*.
 
 == Polynomial container class ==
 For type safety and utility functions there is a class representing polynomials:
 === template<class numtype, int Nvar, int Ndeg> class polynomial; ===
 
-Class that encapsulates binomial(Nvar+Ndeg,Ndeg) coefficients. It is safe to cast (with reinterpret_cast) an array of numtype to a polynomial, or vice versa. It is also safe to cast a polynomial to a polynomial type of lower degree, but with the same number of variables. The polynomial class supports access to the coefficients through the `[]` indexing operator, where the index is the order of the term described in [CoefficientOrder]. Nvar must be greater or equal to one, while Ndeg must be a non-negative number
+Class that encapsulates an Nvar variable Ndeg degree polynomial, with binomial(Nvar+Ndeg,Ndeg) coefficients. It is safe to cast (with reinterpret_cast) an array of numtype to a polynomial, or vice versa. It is also safe to cast a polynomial to a polynomial type of lower degree, but with the same number of variables. The polynomial class supports access to the coefficients through the `[]` indexing operator, where the index is the order of the term described in [CoefficientOrder]. Nvar must be greater or equal to one, while Ndeg must be a non-negative number
 
-The scalar type numtype can be any type that supports the + and `*` operators, and which has a commuting product.
+The scalar type numtype can be any type that supports the +,`*`,+= and `*`= operators, and which has a commuting product.
 
 The polynomial class has the following methods:
 === polynomial::polynomial(); ===
-=== polynomial::polynomial(numtype c0); ===
+=== polynomial::polynomial(const numtype &c0); ===
 Constructors for polynomial. If the c0 argument is given the polynomial is set to zero except the constant term which is set to c0.
 === void polynomial::zero(); ===
 Set all coefficients to 0.
 === static int polynomial::size(); ===
 Return the number of coefficients (terms). This is a compile-time constant.
 === numtype polynomial::eval(const numtype x`[Nvar]`); ===
-Evaluate the polynomial at x. This is reasonable fast but may not be optimal in terms of number of multiplications and additions.
+Evaluate the polynomial at x. This is reasonably fast but may not be optimal in terms of number of multiplications and additions.
 === void polynomial::exponents(int term, int exponents`[Nvar]`); ===
 Calculate the exponents of term, using a very slow method. This is intended for printing, not for fast computation.
 === int polynomial::term_index(int exponents`[Nvar]`); ===
