--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -44,3 +44,7 @@ Here dst, p1 and p2 are polynomials of the same degree. The product of p1 and p2
 
 === `void taylormul(polynomial &p1, const polynomial &p2);` ===
 Like taylormul(), but computes p1 = p1*p2 in-place, using no temporary storage. The second argument can have lower degree than the first.
+
+=== `void polycontract(polynomial &P, const polynomial &p2, const polynomial &p3);` ===
+Consider the expression `dot(p1*p2,p3)`, where `dot()` is a sum of the products of polynomial coefficients. The `polycontract()` function computes P, so that 
+`dot(p1*p2,p3) = dot(p1,P)`. If there are many p1's for each p2 and p3 this can improve performance considerably in certain applications.
