--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -53,8 +53,8 @@ Consider the expression `dot(p1*p2,p3)`, where `dot()` is a sum of the products 
 These functions are only available in the development version at the moment.
 
 === `void polydfac(polynomial &p)` ===
-Multiply each term in the polynomial with appropriate factorials to generate derivatives, i.e. the coefficient of the term x^n y^m z^k would be multiplied by n!m!k!.
-NOTE: The factors are generated as enums, limiting the numeric range to rather small values.
+Multiply each term in the polynomial with appropriate factorials to generate derivatives, i.e. the coefficient of the term `x^n y^m z^k` would be multiplied by n!m!k!.
+NOTE: The factors are generated as enums, limiting the numeric range.
 
 === `void polytrans(polynomial &dst, const polynomial &src, const numtype T[Nvar_src*Nvar_dst])` ===
-Perform a linear change of variables, so that the `n`:th variable in `src` is replaced by a weighted sum of the variables in `dst`, taken from "column" `n` of the matrix T. T is then the inverse of the Jacobian matrix for this change of variables.The polynomials `src` and `dst` can have different number of variables - it is for example possible to pick out a lower dimensional polynomial of a certain subspace.
+Perform a linear change of variables, so that the `n`:th variable in `src` is replaced by a weighted sum of the variables in `dst`, taken from "column" `n` of the matrix `T`. `T` is then the inverse of the Jacobian matrix for this change of variables.The polynomials `src` and `dst` can have different number of variables - it is for example possible to pick out a lower dimensional polynomial of a certain subspace. In this case `T` is a rectangular matrix. 
