--- a/README
+++ b/README
@@ -1,5 +1,14 @@
-Fast multivariate polynomial multiplication in C++,
-by Ulf Ekström <uekstrom@gmail.com> 2009. See 
-polymul.h for license, and polymul.googlecode.com 
-for documentation and the latest version of this
+Fast multivariate polynomial multiplication in C++, by Ulf Ekstrom 
+<uekstrom@gmail.com> 2009. See  polymul.h for license, and 
+polymul.googlecode.com for documentation and the latest version of this
 library.
+
+Included files:
+
+polymul.h          The library header and implementation (self contained)
+polymul_test.cpp   A set of tests for polymul.h
+benchmark.cpp      A simple benchmark program
+polymul_tab.h      Explicit multiplication tables, sometimes much faster
+                   than the recursive templates used by default. Included
+		   into polymul.h by compiling with -DPOLYMUL_TAB
+gentab.py          Generates polymul_tab.h
