--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -2,8 +2,8 @@
 You install polymul by copying the include file `polymul.h` to a suitable location where
 your compiler can find it. However, because the library depends strongly on how your compiler
 will inline the recursive template functions used, it can be advantageous to play with
-settings for inline limits. You can compile and run `benchmark.cpp` to compare the results 
-of different settings.
+settings for inline limits. You can also turn off bounds checking by compiling with -DNDEBUG.
+You can compile and run `benchmark.cpp` to compare the results  of different settings.
 
 For the development version only:
 
@@ -15,4 +15,4 @@ If you need tables of higher order you can run
 
 `python gentab.py Nvar Ndeg > polymul_tab.h`
 
-where Nvar and Ndeg are the maximal parameters for the tables. By default gentab.h will not generate tables for multiplies with more than 1000 terms. You can modify gentab.py to change this limit. 
+where Nvar and Ndeg are the maximal parameters for the tables (the shipped library was generated with `gentab.py 4 4`). By default gentab.h will not generate tables for multiplies with more than 1000 terms. You can modify gentab.py to change this limit. 
