--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 = Installation =
 You install polymul by copying the include file `polymul.h` to a suitable location where
 your compiler can find it. However, because the library depends strongly on how your compiler
@@ -5,9 +6,7 @@ will inline the recursive template functions used, it can be advantageous to pla
 settings for inline limits. You can also turn off bounds checking by compiling with -DNDEBUG.
 You can compile and run `benchmark.cpp` to compare the results  of different settings.
 
-For the development version only:
-
-An alternative is to use explicitly inlined multiplication "tables". Sometimes significant improvements (speedup by 2x) can be observed. A script, written in the Python language, is included for generating these tables. 
+An alternative to automatic inlining is to use explicitly inlined multiplication "tables". Sometimes significant improvements (speedup by 2x) can be observed. A script, written in the Python language, is included for generating these tables. 
 
 Included in the library download are tables for polynomials with up to four variables and up to degree four. 
 To use these tables (contained in the file polymul_tab.h), compile with -DPOLYMUL_TAB.
@@ -15,4 +14,4 @@ If you need tables of higher order you can run
 
 `python gentab.py Nvar Ndeg > polymul_tab.h`
 
-where Nvar and Ndeg are the maximal parameters for the tables (the shipped library was generated with `gentab.py 4 4`). By default gentab.h will not generate tables for multiplies with more than 1000 terms. You can modify gentab.py to change this limit. 
+where Nvar and Ndeg are the maximal parameters for the tables (the shipped library was generated with `gentab.py 4 4`). By default gentab.h will not generate tables for multiplies with more than 1000 terms. You can modify gentab.py to change this limit. Be aware that the number of terms in the tables grow quadratically with the number of terms in the polynomials. 
