Edited wiki page through web user interface.

--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -16,8 +16,8 @@ int main(void)
   polynomial<double, 2, 6> p3;
   // Set p1 = 7*x^2y and p2 = 5*y^3
   int exp1[2] = {2,1}, exp2[2] = {0,3};
-  p1 = 0;
-  p1[p1.term_index(exp1)] = 7;
+  p1 = 0; // Set all coefficients to 0
+  p1[p1.term_index(exp1)] = 7; // Set the x^2y coefficients to 7
   p2 = 0;
   p2[p2.term_index(exp2)] = 5;
   // Multiply p1 and p2, put the result in p3
@@ -25,7 +25,9 @@ int main(void)
   // Look what the resulting x^2y^4 term is:
   int exp3[2] = {2,4};
   cout << "The x^2y^4 term has coefficient " << p3[p3.term_index(exp3)] << endl;
-  // All other coefficients of p3 are zero
+  cout << "All coefficients of p3:" << endl;
+  for (int i=0;i<p3.size;i++)
+     cout << i << " " << p3[i] << endl;
   return 0;
 }
 }}}
