--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 = Polymul example =
 
 This is a small example program that multiplies two polynomials and prints a coefficient from the resulting polynomial. The `term_index` functions takes an array of exponents and returns the index of the corresponding term. This might look a bit awkward, but it's implemented like this to remind you that that this conversion is very slow.
