--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,7 +1,7 @@
 #labels Featured
 = Installation =
 You install polymul by copying the include file `polymul.h` to a suitable location where
-your compiler can find it. However, because the library depends strongly on how your compiler
+your compiler can find it. However, because performance depends strongly on how your compiler
 will inline the recursive template functions used, it can be advantageous to play with
 settings for inline limits. You can also turn off bounds checking by compiling with -DNDEBUG.
 You can compile and run `benchmark.cpp` to compare the results  of different settings.
@@ -14,4 +14,4 @@ If you need tables of higher order you can run
 
 `python gentab.py Nvar Ndeg > polymul_tab.h`
 
-where Nvar and Ndeg are the maximal parameters for the tables (the shipped library was generated with `gentab.py 4 4`). By default gentab.h will not generate tables for multiplies with more than 1000 terms. You can modify gentab.py to change this limit. Be aware that the number of terms in the tables grow quadratically with the number of terms in the polynomials. 
+where Nvar and Ndeg are the maximal parameters for the tables (the shipped library was generated with `gentab.py 4 4`). By default gentab.h will not generate tables for multiplies with more than 1000 terms. You can modify gentab.py to change this limit. Be aware that the number of terms in the tables grow quadratically with the number of terms in the polynomials.
