--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -5,7 +5,7 @@ Note that this documentation refers to the current development version in SVN.
 
 For optimized builds you should compile with -DNDEBUG to turn off bounds checking for operator`[]`. This can have a huge impact on performance.
 
-The whole library is currently contained in the header file *polymul.h*.
+The whole library is currently contained in the header file *polymul.h*, and optionally *polymul_tab.h*.
 
 == General functions ==
 === `int polylen(int Nvar, int Ndeg);` ===
@@ -35,15 +35,15 @@ Calculate the exponents of term, using a very slow method. This is intended for 
 Return the index of the term with exponents. Again, this is a slow function intended for printing and debugging.
 
 == Multiplication functions ==
-A few different functions are provided for multiplying polynomials. These functions are not methods of polynomial. Template arguments have been omitted below, check polymul.h for details. You can use these functions directly on coefficient arrays by using an appropriate reinterpret_cast.
+A few different functions are provided for multiplying polynomials. These functions are not methods of polynomial. Template arguments have been omitted below, so check polymul.h for details. You can use these functions directly on coefficient arrays by using an appropriate reinterpret_cast.
 === `void polymul(polynomial &dst, const polynomial &p1, const polynomial &p2);` ===
 Multiply two polynomials with the same number of variables, p1 and p2, and put the result in dst (a polynomial of the right degree to fit the product exactly). Note that the degree of p1 and p2 does not have to be the same, but dst must have the exact right order to be able to represent the product.
 
 === `void taylormul(polynomial &dst, const polynomial &p1, const polynomial &p2);` ===
-Here dst, p1 and p2 are polynomials of the same degree. The product of p1 and p2 is put in dst, but only those terms up to the original order of the polynomials (the higher terms are not calculated). The name comes from the usefulness of this function in calculating the product of Taylor expansions.
+Here dst, p1 and p2 are polynomials of the same degree. The product of p1 and p2 is put in dst, but only those terms up to the original order of the polynomials (the higher terms are not calculated). The name comes from the use of this function for calculating the product of Taylor expansions, where higher order terms are neglected.
 
 === `void taylormul(polynomial &p1, const polynomial &p2);` ===
-Like taylormul(), but computes p1 = p1*p2 in-place, using no temporary storage. The second argument can have lower degree than the first.
+Like taylormul(), but computes p1 = p1*p2 in-place, using no temporary storage. The second argument can have lower degree than the first, the result is still truncated to the degree of `p1`.
 
 === `void polycontract(polynomial &P, const polynomial &p2, const polynomial &p3);` ===
 Consider the expression `dot(p1*p2,p3)`, where `dot()` is a sum of the products of polynomial coefficients. The `polycontract()` function computes P, so that 
@@ -56,4 +56,5 @@ Multiply each term in the polynomial with appropriate factorials to generate der
 NOTE: The factors are generated as enums, limiting the numeric range.
 
 === `void polytrans(polynomial &dst, const polynomial &src, const numtype T[Nvar_dst*Nvar_src])` ===
-Perform a linear change of variables, so that the `n`:th variable in `src` is replaced by a weighted sum of the variables in `dst`, taken from "column" `n` of the matrix `T`. The first `Nvar_dst` elements of T determine the transformation of variable 0 for src, the next `Nvar_dst` elements the transformation of variable 1, etc. `T` is then the inverse of the Jacobian matrix for this change of variables.The polynomials `src` and `dst` can have different number of variables - it is for example possible to pick out a lower dimensional polynomial of a certain subspace. In this case `T` is a rectangular matrix. 
+Perform a linear change of variables, so that the `n`:th variable in `src` is replaced by a weighted sum of the variables in `dst`, taken from "column" `n` of the matrix `T`. The first `Nvar_dst` elements of T determine the transformation of variable 0 in src, the next `Nvar_dst` elements the transformation of variable 1, etc. `T` is then the inverse of the Jacobian matrix for this change of variables. The polynomials `src` and `dst` can have different number of variables - it is for example possible to pick out a lower dimensional polynomial of a certain subspace. In this case `T` is a rectangular matrix.
+ 
