--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -64,7 +64,7 @@ Consider the expression `dot(p1*p2,p3)`, where `dot()` is a sum of the products 
 == Utility functions ==
 
 === `void polydfac(polynomial &p)` ===
-*WARNING* This function has a off-by-one bug in version 1.0, which corrupts the memory after the polynomial p. This is fixed in svn, and will be included in the next release.
+*WARNING* This function has a off-by-one bug in version 1.0, which corrupts the memory after the polynomial p. This is fixed in svn, and is included in the newer releases.
 
 Multiply each term in the polynomial with appropriate factorials to generate derivatives, i.e. the coefficient of the term `x^n y^m z^k` would be multiplied by n!m!k!.
 NOTE: The factors are generated as enums, limiting the numeric range.
